Core: Support horizontal scrolling Fixes #10

--- a/css/jsgrid.css
+++ b/css/jsgrid.css
@@ -16,7 +16,7 @@
 
 .jsgrid-grid-header {
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: scroll;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -26,7 +26,7 @@
 }
 
 .jsgrid-grid-body {
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
