--- a/css/theme.css
+++ b/css/theme.css
@@ -19,8 +19,30 @@
     border-left: none;
 }
 
+.jsgrid-header-row > th:last-child, .jsgrid-filter-row > td:last-child, .jsgrid-insert-row > td:last-child {
+    border-right: none;
+}
+
 .jsgrid-grid-header {
     background: #f9f9f9;
+}
+
+.jsgrid-header-scrollbar {
+    scrollbar-arrow-color: #f1f1f1;
+    scrollbar-base-color: #f1f1f1;
+    scrollbar-3dlight-color: #f1f1f1;
+    scrollbar-highlight-color: #f1f1f1;
+    scrollbar-track-color: #f1f1f1;
+    scrollbar-shadow-color: #f1f1f1;
+    scrollbar-dark-shadow-color: #f1f1f1;
+}
+
+.jsgrid-header-scrollbar::-webkit-scrollbar {
+    visibility: hidden;
+}
+
+.jsgrid-header-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1;
 }
 
 .jsgrid-header-sortable:hover {
@@ -65,6 +87,10 @@
 
 .jsgrid-grid-body tr td:first-child {
     border-left: none;
+}
+
+.jsgrid-grid-body tr td:last-child {
+    border-right: none;
 }
 
 .jsgrid-row > td {
